--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/font-awesome/css/font-awesome.min.css", 
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css", 
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js", 
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
